styles/Home.module.css
/* ... */
/* nft section */

.nftSection {
    padding: 4rem 207px;
    background-image: url("/nft-bg.webp");
    color: white;
    background-size: cover;
    position: relative;
    z-index: 200;
}

.nftSection h2 {
    font-size: 35px;
    font-weight: 600;
    margin-bottom: 1rem;
}

.nftSection h2 div {
    width: fit-content;
    background-image: linear-gradient(90deg, #39BEF0, #90DEFC, #90DEFC);
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}

.nftCards {
    display: flex;
    gap: 1.5rem;
    margin-top: 2rem;
    /* height: 280px; */
    flex-wrap: wrap;
}

.nftCards button {
    cursor: pointer;
    font-size: 14px;
}

.nftCard1 {
    height: 280px;
}

.nftCard3 {
    height: 280px;
}

.nftCard5 {
    height: 280px;
}

.nftCard2 {
    padding-top: 2rem;
    height: 280px;
}

.nftCard4 {
    padding-top: 2rem;
    height: 280px;
}

.nftSection h3 {
    font-size: 12px;
    font-weight: 600;
    display: flex;
    width: 120px;
    justify-content: space-between;
    align-items: center;
}

.nftSection p {
    color:#39BEF0;
    font-size: 12px;
}

.nftSection button {
    align-self: center;
    margin-bottom: 10rem;
    margin-left: 0.5rem;
    color: white;
    opacity: 0.3;
    background-color: transparent;
    border: solid 1px white;
    width: 70px;
    height: 42px;
    border-radius: 7px;
    font-size: 14px;
}

.ellipse2 {
    position: absolute;
    top: -20px;
    right: 0;
    width: 1621px;
    height: 190px;
    background-image: url("/Ellipse2.png");
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    z-index: 100;
}


/* roadmap section */

.roadmap {
    padding: 4rem 215px;
    color: white;
    position: relative;
    background-image: url("/roadmap-bg.webp");
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
    text-align: center;
}

.roadmap h2 {
    font-size: 45px;
    font-weight: 600;
    margin-top: 20px;
}

.roadmap p {
    font-size: 13px;
    color: #39BEF0;
    font-family: 'JetBrains Mono', monospace;
    margin-bottom: -1rem;
}

.emptyHeight {
    height: 400px;
}

.bigRoadmap {
    display: flex;
    align-items: center;
    justify-content: center;
    justify-content: center;
    background-image: url("/roadmap-big.png");
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
    height: 90%;
}

.smallRoadmap {
    display: none;
}

.roadmapBtns {
    display: flex;
    justify-content: center;
    gap: 0.5rem;
}

.roadmapBtns button {
    cursor: pointer;
    z-index: 100;
    font-size: 14px;
}

.roadmapBtns button:first-of-type {
    color: white;
    background-color: #39BEF0;
    padding: 0.7rem 1.5rem;
    border-radius: 7px;
    font-weight: 600;
    border: none;
    z-index: 100;
}

.roadmapBtns button:nth-of-type(2) {
    color: white;
    background-color: rgba(100, 100, 100, 0.3);
    padding: 0.7rem 1.5rem;
    border-radius: 7px;
    font-weight: 600;
    border: none;
}

/* team section */

.team {
    padding: 4rem 209px;
    color: white;
    position: relative;
    background-image: url("/team-bg.webp");
    background-size: cover;
    background-repeat: no-repeat;
}

.ellipse3 {
    position: absolute;
    top: -70px;
    right: 0;
    width: 100vw;
    height: 190px;
    background-image: url("/Ellipse3.png");
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
}

.team h2 {
    font-size: 35px;
    font-weight: 600;
    margin-bottom: 2rem;
}

.team h2 span {
    background-image: linear-gradient(90deg, #39BEF0, #90DEFC, #90DEFC);
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}

.teamCards {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 0.7rem;
}

.teamCard {
    padding: 0.7rem;
    background-color: #101219;
    border-radius: 7px;
    height: 160px;
    position: relative;
}

.cardHead {
    position: relative;
    top: -5px;
    background: linear-gradient(163.86deg, rgba(36, 38, 48, 0.75) -3.59%, rgba(36, 38, 48, 0) 162.71%);
    border-radius: 7px;
}

.profilePlaceholder {
    position: absolute;
    background-color: #101219;
    top: 25px;
    left: 30px;
    width: 78px;
    height: 78px;
    border-radius: 7px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.overlay {
    position: absolute;
    top: 10px;
    height: 54px;
    width: 54px;
    background: linear-gradient(9.93deg, #39BEF0 -51.58%, rgba(57, 190, 240, 0) 78.37%);
    border-radius: 7px;
}

.cardText {
    padding: 0 1rem;
}

.cardText p {
    font-size: 12px;
    color: rgba(255, 255, 255, 0.7);
    margin-bottom: -0.8rem;
}

.cardText h3 {
    font-size: 18px;
    font-weight: 600;
    display: flex;
    align-items: center;
    gap: 0.5rem;
}

.cardText h3 img {
    cursor: pointer;
}

.cardText span {
    flex-grow: 1;
}

.tags {
    position: absolute;
    top: 0;
    right: 10px;
    display: flex;
    margin-top: 1rem;
}

.tags p {
    font-size: 12px;
    color: rgba(255, 255, 255, 0.7);
    margin-top: 2.6rem;
}

.ellipse4 {
    position: absolute;
    bottom: -130px;
    right: 0;
    width: 100vw;
    height: 200px;
    background-image: url("/Ellipse4.png");
    background-repeat: no-repeat;
    background-size: 100vw;
    background-position: center;
    z-index: 101;
}


/* mint section */

.mint {
    padding: 4rem 211px;
    color: white;
    position: relative;
    background-image: url("/mint-bg.webp");
    background-size: cover;
    background-repeat: no-repeat;
}

.mint h2 {
    font-size: 40px;
    font-weight: 600;
    margin-top: 20px;
    margin-bottom: 2rem;
    text-align: center;
}

.mint p {
    font-size: 13px;
    color: #39BEF0;
    font-family: 'JetBrains Mono', monospace;
    margin-bottom: -1rem;
    text-align: center;
}
/* ... */

